--- a/src/components/homepage_components/HeroSectionV2.css
+++ b/src/components/homepage_components/HeroSectionV2.css
@@ -42,6 +42,7 @@
   font-weight: 600;
 }
 
+
 .hero-v2-buttons {
   margin-top: 20px;
   display: flex;
@@ -49,6 +50,7 @@
 }
 
 .hero-btn {
+  width: 150px;
   padding: 10px 32px;
   border: none;
   outline: none;
@@ -84,6 +86,7 @@
     font-size: 14px;
   }
   .hero-v2-buttons {
+    
   margin-top: 20px;
   display: flex;
   gap: 10px;
