--- a/src/components/homepage_components/HeroSectionV2.css
+++ b/src/components/homepage_components/HeroSectionV2.css
@@ -93,13 +93,10 @@
   justify-content: center;
 }
 }
-
 .full-video-wrapper {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100dvh;
   overflow: hidden;
-  margin: 0;
-  padding: 0;
   position: relative;
 }
 
@@ -107,5 +104,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center center;
   display: block;
 }
