--- a/src/components/homepage_components/HeroSectionV2.css
+++ b/src/components/homepage_components/HeroSectionV2.css
@@ -94,16 +94,19 @@
 }
 }
 .full-video-wrapper {
-  width: 100%;
-  height: 100dvh;
-  overflow: hidden;
   position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: black; /* to fill gaps */
 }
 
 .faq-video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center center;
-  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translate(-50%, -50%);
+  object-fit: contain; /* ensures full video is visible */
 }
