--- a/src/components/homepage_components/intro.css
+++ b/src/components/homepage_components/intro.css
@@ -57,10 +57,10 @@
 }
 
 .intro-name-flat {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   color: #111;
-  text-transform: uppercase;
+  text-transform: capitalize;
   letter-spacing: 0.4px;
   margin-bottom: 6px;
 }
